# Text-Summarizer

./: README.md  com.schelb.summarizing.json  meson.build  python3-json.json  python3-pandas.json  python3-sentencepiece.json  python3-torch.json  python3-transformers.json
data/: com.schelb.summarizing.appdata.xml.in  com.schelb.summarizing.desktop.in  com.schelb.summarizing.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  summarizing_text.gresource.xml  summarizing_text.in  window.py  window.ui  window.ui~
